2004-07-05  Petr Ovchenkov  <ptr@Island...>

	* src/facets_byname.cpp: avoid pass address to member of derived class into
	base class via constructor.

	* src/facets_byname.cpp: remove first member---EOF---of _M_byname_table---one
	not required and lead to wrong reference; this a fix for test in
	locale_test.cpp.

	* src/ctype.cpp: ditto.

	* src/c_locale_win32/c_locale_win32.c: ditto.

	* stlport/stl/_ctype.h: ditto.

2004-07-02  Petr Ovtchenkov  <ptr@Island...>

	* src/c_locale_glibc/c_locale_glibc2.c: message catalog functions dealing
	with message catalog descriptor; but this descriptor not necessary to be
	int; Linux use here void *, i.e. pointer to mmap segment.

	* stlport/stl/_messages_facets.h: ditto.

	* src/messages.cpp: ditto.

	* src/message_facets.h: ditto.

	* src/facets_byname.cpp: ditto.

	* src/c_locale_stub.cpp: ditto.

	* src/c_locale.h: ditto.

	* src/c_locale_glibc/c_locale_glibc2.c: fix _Locale_extract_*_name
	functions.

2004-07-01  Francois Dumont  <dums@...>

	* src/explore/Makefiles/nmake/lib/vc-common.mak: creation of the
	STLP_BUILD_FORCE_DYNAMIC_RUNTIME option to create STLport statix
	versions more easily.

2004-06-30  Francois Dumont  <dums@...>

	* stlport/stl/_function.h: Use a call_traits to avoid the reference
	to reference problem in struct like binder1st or binder2nd.

2004-06-26  Francois Dumont  <dums@...>

	* src/explore/: portage of the explore build system for the 
	MSVC .Net 2003 compiler.

2004-06-24  Francois Dumont  <dums@...>

	* stlport/stl/_site_config.h: Addition of an entry for the per thread
	allocator configuration.

	* stlport/stl/_config.h: Avoid use of the import/export technique
	when not using own iostreams. This way you can use the STLport debug
	mode without building the libraries.

2004-06-23  Francois Dumont  <dums@...>

	* extension of the cygwin link problem workaround for mingw32.

	* src/locale_catalog.cpp: Move of the _STLP_lock object instance 